# knets

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  test_nn.py  train.py  train_cnn.py  train_nn.py
.github/workflows/: ci-test.yml
csrc/: macros.h
csrc/datasets/: csvloader.h
csrc/malloc/: enum.h
csrc/malloc/nn/: functional.h  modules.h  options.h
csrc/malloc/nn/modules/: loss.h  (+2 more)
csrc/ops/: activations.h  ops.h
csrc/src/: enum.cpp
csrc/src/nn/: module.h
datasets/: __init__.py  vision.py
datasets/results/: files.md
datasets/results/iteration-1/: accuracy.csv  test_loss.csv  test_specificity.csv  train_out.txt
datasets/results/iteration-10/: test_accuracy.csv  test_loss.csv  test_output.txt
datasets/results/iteration-11/: test_loss.csv  test_output.txt
datasets/results/iteration-12/: test_accuracy.csv  test_loss.csv  test_output.txt  train_out.txt
datasets/results/iteration-2/: loss.csv  precision.csv  recall.csv  test_loss.csv  test_precision.csv
eval/: __init__.py  metrics.py
examples/: classifier.py  regressor.py
examples/images/: accuracy_iter_4_3  accuracy_iter_4_5
models/: __init__.py  layers.py  module.py
ops/: __init__.py  activations.py  losses.py  optimizers.py
src/knets/: __init__.py  activations.py  dataloader.py  initializers.py  layers.py  losses.py  metrics.py  module.py  optimizers.py  variable.py
tests/: classifier.py  regressor.py  test_nn.py  train_nn.py
tests/datasets/: mnist.py
tests/images/: accuracy_iter1  accuracy_iter6  accuracy_iter_4_6
tests/visualizations/: _plot.py  mnist_digits.py
(+83 files in other folders)
