[metadata]
name = knets
version = 0.0.10
author = khushi-411
author_email = khushiagrawal411@gmail.com
description = A simple neural network library like PyTorch.
long_description = file: README.md
url = https://github.com/khushi-411/knets
project_urls = 
    Bug Tracker = https://github.com/khushi-411/knets/issues
    Source = https://github.com/khushi-411/knets
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib==3.4.3
    seaborn==0.11.2
    csv==1.0
    pandas==1.3.3
    torch==1.9.1
    torchvision==0.10.0+cu102 

[options.packages.find]
where = src

[flake8]
max-line-length = 80
