[metadata]
name = knets
version = 0.0.10
author = khushi-411
author_email = khushiagrawal411@gmail.com
description = A simple neural network library like PyTorch.
long_description = file: README.md
url = https://github.com/khushi-411/knets
project_urls = 
    Bug Tracker = https://github.com/khushi-411/knets/issues
    Source = https://github.com/khushi-411/knets
classifiers =
    Intended Audience :: Students & Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    seaborn
    pandas
    torch
    torchvision

[options.packages.find]
where = src

[flake8]
max-line-length: 80
